# VulkanTut

./: .gitignore  .gitmodules  AppSetup.h  CMakeLists.txt  CMakeUserPresets.json  EcsSystemsHeader.h  README.md  TriangleApp.h  cpp.hint  main.cpp  vcpkg.json  vulkan.mdj
assets/: auto_waterphone.glb
core/: CMakeLists.txt
core/private/drawing/include/: CommandBuffer.h  CommandBufferRecorder.h  CommandPool.h  FrameBuffers.h  VulkanFrame.h
core/private/drawing/src/: CommandBuffer.cpp  CommandBufferRecorder.cpp  CommandPool.cpp  FrameBuffers.cpp  VulkanFrame.cpp
core/private/graphics_pipeline/include/: GraphicsPipeline.h  RenderPass.h  ShaderModule.h  VulkanPipeline.h
core/private/graphics_pipeline/src/: GraphicsPipeline.cpp  RenderPass.cpp  ShaderModule.cpp  VulkanPipeline.cpp
core/private/misc/include/: VmaInstance.h  VulkanResource.h
core/private/presentation/include/: SwapChain.h  VulkanSurface.h
core/private/presentation/src/: SwapChain.cpp  VulkanSurface.cpp
core/private/setup/include/: PhysicalDevice.h  QueueFamilyIndices.h  ValidationLayers.h  VulkanInstance.h
core/private/setup/src/: GlfwWindow.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  ValidationLayers.cpp  VulkanInstance.cpp
core/private/uniform_buffer/include/: DescriptorPool.h  DescriptorSetLayout.h  DescriptorSets.h
core/private/vertex_buffer/include/: Buffer.h  IndexBuffer.h  Vertex.h  VertexBuffer.h
core/private/vertex_buffer/src/: Buffer.cpp  IndexBuffer.cpp  Vertex.cpp  VertexBuffer.cpp
core/public/include/: VulkanAppContext.h  VulkanRenderer.h
core/public/src/: VulkanAppContext.cpp  VulkanRenderer.cpp
scripts/: EventSystem.h  FlycamSystem.h  MeshRendering.h  MeshRotate.h  SimplePhysics.h
shaders/: CompileShader.bat  color.glsl  input.glsl  lighting.frag  lighting.frag.spv  pbr.glsl  (+8 more)
vulkan_rendering/: CMakeLists.txt
vulkan_rendering/private/: DeviceContext.cpp  FrameInfo.cpp  RenderObject.cpp  Texture2D.cpp  VulkanAppContext.cpp  VulkanRenderScene.cpp  VulkanRenderer.cpp
vulkan_rendering/private/components/: Camera.cpp  Camera.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  RenderingBase.cpp  RenderingBase.h  Transform.h
vulkan_rendering/private/descriptor/: DescriptorContext.cpp  DescriptorContext.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorPoolAllocator.cpp  DescriptorPoolAllocator.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutBinding.h  DescriptorSets.cpp  DescriptorSets.h  DescriptorWriter.cpp  DescriptorWriter.h  EngineDescriptorDef.cpp  EngineDescriptorDef.h
vulkan_rendering/private/drawing/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferRecorder.cpp  CommandBufferRecorder.h  CommandPool.cpp  CommandPool.h  FrameBuffers.cpp  FrameBuffers.h  QueueContext.cpp  QueueContext.h  RenderPassRecorder.cpp  RenderPassRecorder.h  VulkanFrame.cpp  VulkanFrame.h
vulkan_rendering/private/graphics_pipeline/: GraphicsPipeline.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  PipelineContext.cpp  PipelineContext.h  PipelineLayout.cpp  PipelineLayout.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  ShaderModule.cpp  ShaderModule.h  ShaderReflectionResult.cpp  ShaderReflectionResult.h  VulkanPipeline.cpp  VulkanPipeline.h
vulkan_rendering/private/misc/: Camera.cpp  Camera.h  CompoundDataContainers.h  ContextMacros.h  Ecs.cpp  Ecs.h  EcsSystem.h  EnginePipeline.h  FileUtility.cpp  FileUtility.h  FormatGen.py  LifetimeBarrier.cpp  LifetimeBarrier.h  Mesh.cpp  Mesh.h  ObjectBehaviour.h  ObjectHierarchy.cpp  ObjectHierarchy.h  ObjectPool.h  Polymorphism.h  RenderingContext.cpp  RenderingContext.h  ResourceDescriptor.h  SubContext.cpp  SubContext.h  Transform.h  UtilityMacros.h  VmaInstance.cpp  VmaInstance.h  VulkanResource.h  cascade_map.h
vulkan_rendering/private/model_loading/: GltfLoader.cpp  GltfLoader.h  ObjLoader.cpp  ObjLoader.h
vulkan_rendering/private/presentation/: ColorAttachment.cpp  ColorAttachment.h  DepthAttachment.cpp  DepthAttachment.h  RenderAttachment.cpp  RenderAttachment.h  SwapChain.cpp  SwapChain.h  VulkanSurface.cpp  VulkanSurface.h  WindowContext.cpp  WindowContext.h
vulkan_rendering/private/setup/: GlfwWindow.cpp  GlfwWindow.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  QueueFamilyIndices.h  ValidationLayers.cpp  ValidationLayers.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueue.cpp  VulkanQueue.h
vulkan_rendering/private/texture_mapping/: ImageView.cpp  ImageView.h  Texture2D.cpp  Texture2D.h  TextureAddressMode.cpp  TextureAddressMode.h  TextureAnisotropyInfo.cpp  TextureAnisotropyInfo.h  TextureCompareInfo.cpp  TextureCompareInfo.h  TextureFilterMode.cpp  TextureFilterMode.h  TextureImage.cpp  TextureImage.h  TextureMipmapInfo.cpp  TextureMipmapInfo.h  TextureSampler.cpp  TextureSampler.h  UnifiedTexture2D.cpp  UnifiedTexture2D.h
vulkan_rendering/private/uniform_buffer/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutBinding.h  DescriptorSets.cpp  DescriptorSets.h  PerFrameBufferGroup.cpp  PerFrameBufferGroup.h  UniformBufferGroup.cpp  UniformBufferGroup.h  UniformBufferObject.cpp  UniformBufferObject.h
vulkan_rendering/private/vertex_buffer/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  MeshBuffer.cpp  MeshBuffer.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
vulkan_rendering/private/vma/: VmaInstance.cpp  VmaInstance.h
vulkan_rendering/public/: CommandBufferCmd.h  CommandBufferCommand.h  DeviceContext.h  FrameInfo.h  RenderObject.h  Texture2D.h  VulkanAppContext.h  VulkanRenderScene.h  VulkanRenderer.h  VulkanSetupProcedure.h
vulkan_rendering/public/CommandBufferCmds/: BindDescriptorSet.h  BindVertexBuffer.h  DrawIndexed.h  SetViewport.h
vulkan_rendering/public/command_buffer_cmds/: BindDescriptorSet.h  BindIndexBuffer.h  BindPipeline.h  BindVertexBuffer.h  CBC_Drawing.h  CBC_Misc.h  CopyBuffer.h  CopyBufferToImage.h  DrawIndexed.h  EnqueueRenderPass.h  SetScissors.h  SetViewport.h  TransitionImageLayout.h
(+9 files in other folders)
